# who-does-what

./: README.md  who-does-what.code-workspace
.devcontainer/backend/: Dockerfile  devcontainer.json
.github/workflows/: api.ci.yml  ci.yml  infra.deploy.yml
backend/: .gitignore  AGENTS.md  DB_PLAN.md  Makefile  README.md  alembic.ini  dev.env  docker-compose.yml  pyproject.toml
backend/.cursor/rules/: general.mdc  python.mdc
backend/.github/workflows/: ci.yml
backend/alembic/: env.py
backend/alembic/versions/: 7c836ed75f25_init_schema.py
backend/devtools/: install-dependencies.sh
backend/devtools/db/: init-db.sh  init.sql  smoke-check.sh
backend/infra/: README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
backend/src/who_does_what_api/: __init__.py  db.py  main.py  settings.py
backend/tests/who_does_what_api/: db_test.py  main_test.py
