[project]
name = "who-does-what-api"
version = "0.1.0"
description = "Backend for Who Does What application"
readme = "README.md"
authors = [
    { name = "Javier Carnero", email = "javier@carnero.net" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.12.0",
    "structlog>=25.5.0",
]

[project.scripts]
who-does-what-api = "who_does_what_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverage>=7.13.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

#### Ruff configuration
[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# Enable flake8-bugbear (`B`) rules, in addition to the defaults.
extend-select = ["B"]
# Avoid enforcing line-length violations (`E501`)
extend-ignore = ["E203", "E501", "E701"]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files.
"__init__.py" = ["E402"]
